--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^3.11.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
@@ -44,14 +45,12 @@
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
-
   "scripts": {
     "build": "react-scripts build",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
