--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Assimilacao RPG",
-  "name": "Create React App Sample",
+  "name": "Site criado para o AssimilaçãoRPG (Não Oficial)",
   "icons": [
     {
       "src": "favicon.ico",
