--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assrpgsite",
+  "name": "nero-industries",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -57,10 +57,7 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "globals": {
-      "kofiWidgetOverlay": "readonly"
-    }
+    ]
   },
   "browserslist": {
     "production": [
