--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mysql2": "^3.11.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
