--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.0",
+    "framer-motion": "^12.17.3",
     "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
