--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@dicebear/core": "^9.2.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@fontsource/material-icons": "^5.2.7",
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.8",
