--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
